fixing alignment

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 
 .img.align-self-stretch {
 background-image: url(images/fernando_headshot.png);
-    background-size: contain;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .ftco-social {
